--- a/main.css
+++ b/main.css
@@ -1,88 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} 
 
-body{
-    font-family: 'Poppins', sans-serif;
-    background: #161623;
+
+body {
+  background-color: dodgerblue;
+  width: 100vw;
+  height: 100svh;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
 }
 
-.container{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    height: 100vh;
+h1 {
+  color: rgb(8, 41, 61);
+  padding-top: 20px;
+  font-size: 80px;
 }
 
-.card{
-    background: whitesmoke;
-    width: 370px;
-    border-radius: 20px;
-    padding-top: 50px;
-    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(58, 55, 57, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
-    /* transition: 0.9s; */
-}
-
-.heading{
-    font-size: 40px;
-}
-
-.blue{
-    color: rgb(3, 55, 167);
-}
-
-.pink{
-    color: crimson;
+.row {
+  text-align: center;
+  position: relative;
+  top: 180px;
+  width: 100%;
+  height: 100%
 }
 
 
-input{
-    margin: 20px 20px;
-    border-style: none;
-    outline: none;
-    border: 3px solid crimson;
-    border-radius: 20px;
-    width: 280px;
-    padding: 10px;
-    font-size: 20px;
-    margin-bottom: 25px;
-    color: crimson;
-    font-family: inherit;
+.card {
+  display: inline-block;
+  width: 100px;   
+  height: 100px;
+  background-color: #eee;
+  cursor: pointer;
 }
 
-input::placeholder{
-    color: crimson;
-    font-family: inherit;
+  
+.card.done {
+  cursor: default;
+}
+  
+.card.done:hover {
+  cursor: default;
+  box-shadow: none;
+ }
+  
+
+.card:hover {
+  box-shadow: inset 0px 0px 0px 1px red;
+  box-sizing: border-box;
+ }
+
+  
+.red {
+  background-color: red;
+  }
+
+.green {
+  background-color: green; 
+  }
+
+.blue {
+  background-color: blue;
+ }
+
+.orange {
+  background-color: orange;
+ }
+
+.cyan {
+  background-color: cyan;
+ }
+
+.yellow {
+  background-color: yellow;
+ }
+
+.pink {
+  background-color: pink;
 }
 
-button{
-    font-size: 20px;
-    padding: 15px;
-    border: 3px solid rgb(3, 55, 167);
-    background: rgba(220, 20, 60, 0);
-    color: rgb(3, 55, 167);
-    border-radius: 20px;
-    cursor: pointer;
-    font-family: inherit;
+.teal {
+  background-color: teal;
 }
-
-button:hover{
-    background: rgb(3, 55, 167);
-    color: whitesmoke;
-    transition: 0.2s;
-}
-
-.result{
-    font-size: 30px;
-    line-height: 18px;
-    color: grey;
-}
-
-@media (max-width: 460px) {
-    .card{
-        width: 320px;
-    }
-    input{
-        width: 220px;
-    }
+  
+.color-hidden {
+  background-color: #eee;
 }
